--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.3-1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
@@ -13,6 +14,7 @@
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
