--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3",
     "jquery": "^3.6.0",
+    "jquery-bar-rating": "^1.2.2",
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
